feat: add update category with admin permission functionality
