# api/swagger.json
@@ -542,6 +542,56 @@
         "tags": [
           "Categories"
         ]
+      },
+      "patch": {
+        "operationId": "CategoryController_update",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateCategoryDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "category updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CategoryResponseDto"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Category not found"
+          },
+          "409": {
+            "description": "Category slug already"
+          }
+        },
+        "security": [
+          {
+            "JWT-auth": []
+          }
+        ],
+        "summary": "Update category (Admin only)",
+        "tags": [
+          "Categories"
+        ]
       }
     },
     "/api/v1/categories/slug/{slug}": {
@@ -899,6 +949,41 @@
           "createdAt",
           "updatedAt"
         ]
+      },
+      "UpdateCategoryDto": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "example": "Electronics",
+            "description": "The name of the category",
+            "maxLength": 100
+          },
+          "description": {
+            "type": "string",
+            "example": "Devices and gadgets including phones, laptops, and accessories",
+            "description": "A brief description of the category",
+            "maxLength": 255
+          },
+          "slug": {
+            "type": "string",
+            "example": "electronics",
+            "description": "The URL-friendly slug for the category",
+            "maxLength": 100
+          },
+          "imageUrl": {
+            "type": "string",
+            "example": "https://example.com/images/electronics.png",
+            "description": "URL of the category image",
+            "maxLength": 255
+          },
+          "isActive": {
+            "type": "boolean",
+            "example": true,
+            "description": "Indicates if the category is active",
+            "default": true
+          }
+        }
       }
     }
   }
